[gd_scene load_steps=20 format=3 uid="uid://dbt4lpp6g568c"]

[ext_resource type="Script" path="res://scripts/MenuScene.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://h4je4bj5gaqj" path="res://sprites/BackgroundBlue.png" id="2"]
[ext_resource type="FontFile" uid="uid://cxuft2yrjm7pw" path="res://fonts/Symtext.ttf" id="3"]
[ext_resource type="Script" path="res://scripts/ColorElement.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://22vi4kpbsmgm" path="res://sprites/BackgroundGray.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bu6j2ttw5b3p0" path="res://sprites/BackgroundRed.png" id="6"]
[ext_resource type="Texture2D" uid="uid://kfd0is3p0wt5" path="res://sprites/BackgroundPink.png" id="7"]
[ext_resource type="Texture2D" uid="uid://c60xesdvy0rhl" path="res://sprites/BackgroundOrange.png" id="8"]
[ext_resource type="Texture2D" uid="uid://em2mxi0jdeei" path="res://sprites/BackgroundDarkGreen.png" id="9"]
[ext_resource type="Texture2D" uid="uid://blyr0tj0gh02m" path="res://sprites/BackgroundBlack.png" id="10"]
[ext_resource type="Texture2D" uid="uid://camrj1rpsj8mm" path="res://sprites/BackgroundPurple.png" id="11"]
[ext_resource type="AudioStream" uid="uid://b5iwk3711u2ib" path="res://music/Yugioh_GX-_Judai_s_Theme.mp3" id="12_0vysp"]
[ext_resource type="AudioStream" uid="uid://b3okkcvm1vqbl" path="res://music/Passionate_Duelist_Yugi_Dual_Mix.mp3" id="13_c6h43"]
[ext_resource type="AudioStream" uid="uid://7edblmr75p72" path="res://music/StartLevel.MP3" id="13_op0hs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3tmo"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u23gv"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cgejk"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qi1r8"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(25.1528, 25.2018)

[node name="MenuScene" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(60, 33.75)
texture = ExtResource("2")
centered = false

[node name="GameName" type="RichTextLabel" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 459.0
offset_top = 42.0
offset_right = 2139.0
offset_bottom = 306.0
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3")
theme_override_font_sizes/normal_font_size = 180
text = "MATCH UP!"
fit_content = true
scroll_active = false

[node name="QuitButton" type="Button" parent="."]
offset_left = 650.0
offset_top = 590.0
offset_right = 1270.0
offset_bottom = 830.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 140
theme_override_styles/hover = SubResource("StyleBoxFlat_g3tmo")
theme_override_styles/normal = SubResource("StyleBoxFlat_u23gv")
text = "Quit"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 631.0
offset_top = 330.0
offset_right = 1277.0
offset_bottom = 539.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 140
theme_override_styles/hover = SubResource("StyleBoxFlat_cgejk")
theme_override_styles/normal = SubResource("StyleBoxFlat_qi1r8")
text = "Start"

[node name="Credits" type="RichTextLabel" parent="."]
offset_left = 659.0
offset_top = 862.0
offset_right = 1323.0
offset_bottom = 1022.0
theme_override_fonts/normal_font = ExtResource("3")
theme_override_font_sizes/normal_font_size = 30
text = "Pay attention to the card designs; even small details can help you remember!"
scroll_active = false

[node name="ClickColors" type="RichTextLabel" parent="."]
offset_left = 200.0
offset_top = 600.0
offset_right = 560.0
offset_bottom = 780.0
theme_override_fonts/normal_font = ExtResource("3")
theme_override_font_sizes/normal_font_size = 27
text = "click color blocks to change the background color"
scroll_active = false

[node name="GrayElement" type="Area2D" parent="."]
position = Vector2(240, 460)
gravity = 98.0
script = ExtResource("4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrayElement"]
scale = Vector2(2.5, 2.5)
shape = SubResource("4")

[node name="Sprite" type="Sprite2D" parent="GrayElement"]
scale = Vector2(2, 2)
texture = ExtResource("5")

[node name="RedElement" type="Area2D" parent="."]
position = Vector2(240, 540)
gravity = 98.0
script = ExtResource("4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedElement"]
scale = Vector2(2.5, 2.5)
shape = SubResource("4")

[node name="Sprite" type="Sprite2D" parent="RedElement"]
scale = Vector2(2, 2)
texture = ExtResource("6")

[node name="PinkElement" type="Area2D" parent="."]
position = Vector2(320, 540)
gravity = 98.0
script = ExtResource("4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PinkElement"]
scale = Vector2(2.5, 2.5)
shape = SubResource("4")

[node name="Sprite" type="Sprite2D" parent="PinkElement"]
scale = Vector2(2, 2)
texture = ExtResource("7")

[node name="BlueElement" type="Area2D" parent="."]
position = Vector2(400, 540)
gravity = 98.0
script = ExtResource("4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlueElement"]
scale = Vector2(2.5, 2.5)
shape = SubResource("4")

[node name="Sprite" type="Sprite2D" parent="BlueElement"]
scale = Vector2(2, 2)
texture = ExtResource("2")

[node name="OrangeElement" type="Area2D" parent="."]
position = Vector2(480, 540)
gravity = 98.0
script = ExtResource("4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OrangeElement"]
scale = Vector2(2.5, 2.5)
shape = SubResource("4")

[node name="Sprite" type="Sprite2D" parent="OrangeElement"]
scale = Vector2(2, 2)
texture = ExtResource("8")

[node name="DarkGreenElement" type="Area2D" parent="."]
position = Vector2(400, 460)
gravity = 98.0
script = ExtResource("4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DarkGreenElement"]
scale = Vector2(2.5, 2.5)
shape = SubResource("4")

[node name="Sprite" type="Sprite2D" parent="DarkGreenElement"]
scale = Vector2(2, 2)
texture = ExtResource("9")

[node name="BlacKElement" type="Area2D" parent="."]
position = Vector2(320, 460)
gravity = 98.0
script = ExtResource("4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlacKElement"]
scale = Vector2(2.5, 2.5)
shape = SubResource("4")

[node name="Sprite" type="Sprite2D" parent="BlacKElement"]
scale = Vector2(2, 2)
texture = ExtResource("10")

[node name="PurpleElement" type="Area2D" parent="."]
position = Vector2(480, 460)
gravity = 98.0
script = ExtResource("4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PurpleElement"]
scale = Vector2(2.5, 2.5)
shape = SubResource("4")

[node name="Sprite" type="Sprite2D" parent="PurpleElement"]
scale = Vector2(2, 2)
texture = ExtResource("11")

[node name="MenuBackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_0vysp")
volume_db = 9.905
parameters/looping = true

[node name="ClickStartSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_op0hs")
volume_db = 9.905

[node name="GameBGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_c6h43")
volume_db = 9.905
parameters/looping = true

[connection signal="button_down" from="QuitButton" to="." method="_on_QuitButton_button_down"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
